# ComFlux-Middleware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: lookup_sink.c  lookup_source.c  mw_cfg.json  simple_req.c  simple_res.c  simple_sink.c  simple_sink_nomap.c  simple_source.c  simple_stream_snk.c  simple_stream_src.c  snk_mqtt.cfg.json  snk_mw_cfg.json  src_mqtt.cfg.json  src_mw_cfg.json
examples/example_schemata/: datetime_value.json  msg_example.json
include/: component.h  endpoint.h  load_mw_config.h  middleware.h
modules/access_modules/: auth.h
modules/access_modules/krb5/: aclkrb.cfg.json  krb5_acc.c  krb5_acc.h
modules/access_modules/plain/: aclplain.cfg.json  simple_acc.c  simple_acc.h
modules/access_modules/ssl/: aclssl.cfg.json  ssl_acc.c  ssl_acc.h
modules/com_modules/: com.h
modules/com_modules/mqtt/: com_mqtt.c  com_mqtt.h  mqtt.cfg.json
modules/com_modules/mqtt_bridge/: com_mqtt_bridge.c  com_mqtt_bridge.h  mqtt.cfg.json  mqtt_src.cfg.json
modules/com_modules/rest/: conn_rest.c  conn_rest.h  rest_dst.cfg.json  rest_src.cfg.json
modules/com_modules/sockpair/: sockpair.c  sockpair.cfg.json  sockpair.h  sockpair_core.cfg.json
modules/com_modules/ssl/: conn_ssl.c  conn_ssl.h  ssl_snk.cfg.json  ssl_src.cfg.json
modules/com_modules/tcp/: com_tcp.c  com_tcp.h  tcp_snk.cfg.json  tcp_src.cfg.json
modules/com_modules/udp/: conn_udp.c  conn_udp.h
src/api/: endpoint.c  load_mw_config.c  middleware.c
src/common/: conn_fifo.c  conn_fifo.h  endpoint_base.c  endpoint_base.h  environment.h  json_filter.c  json_filter.h  message.c  message.h  sync.c  sync.h
src/core/: core.c  core.h  core_callbacks.c  core_callbacks.h  core_main.c  core_module.c  core_module.h  core_module_api.c  core_module_api.h  default_eps.c  default_eps.h  endpoint.c  endpoint.h  json_builds.c  json_builds.h  manifest.c  manifest.h  protocol.c  protocol.h  rdcs.c  rdcs.h  state.c  state.h
src/json/default_eps/: add_rdc_ep.json  load_access_module_ep.json  load_com_module_ep.json  lookup_ep.json  map_ep.json  map_lookup_ep.json  md_ep.json  reg_rdc.json  set_credentials_ep.json  terminate.json  unmap_ep.json
src/json/preloaded_schemata/: auth.schema.json  auth_ack.schema.json  hello.schema.json  hello_ack.schema.json  map.schema.json  map_ack.schema.json
src/json/rdc_schemata/: map_lookup_msg_example.json  map_lookup_resp_example.json  map_msg_example.json  msg_add_rdc.json  rdc_getmd_resp.json  rdc_lookup_resp.json
src/json/swiss_schemata/: load_auth_module_msg.json  load_com_module_msg.json  set_credenials_msg.json
src/module_wrappers/: access_wrapper.c  access_wrapper.h  com_wrapper.c  com_wrapper.h
src/rdc/: rdc.c
src/rdc/config/: rdc.cfg.json  rdc_tcp.cfg.json
src/swiss_knife/: swiss_knife.c  toolbox.c  toolbox.h
src/swiss_knife/config/: swiss_knife.cfg.json  swiss_knife_tcp.cfg.json
src/utils/: array.c  array.h  file.c  file.h  hashmap.c  hashmap.h  json.c  json.h  slog.c  slog.h  utils.c  utils.h
tests/: 1src_mw_cfg.json  2src_mw_cfg.json  3src_mw_cfg.json  control_mqtt_receiver.c  control_mqtt_sender.c  control_tcp_receiver.c  control_tcp_sender.c  ctrl_tcp_receiver.c  ctrl_tcp_sender.c  lorem.txt  stream_tcp_receiver.c  stream_tcp_sender.c  test_mqtt_receiver.c  test_mqtt_sender.c  test_tcp_receiver.c  test_tcp_sender.c
